<resources>
    <string name="app_name">Agrino</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="services">Services</string>
    <string name="Know">Know</string>
    <string name="Resources">Resources</string>
    <string name="crop">Crop</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
